fix: try fix flickering when scrolling over multiple pages

--- a/src/main.scss
+++ b/src/main.scss
@@ -73,8 +73,11 @@
 /* Global settings */
 
 * {
-  font-family: 'Open Sans', sans-serif;
   box-sizing: border-box;
+}
+
+body {
+  font-family: 'Open Sans', sans-serif;
 }
 
 p,
